[gd_scene load_steps=13 format=2]

[ext_resource path="res://bodies/player_ball/PlayerBall.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/Game.gd" type="Script" id=2]
[ext_resource path="res://bodies/ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Peace Sans.otf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/game/Explosion.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/game/button_style.tres" type="StyleBox" id=7]
[ext_resource path="res://scenes/game/button_font.tres" type="DynamicFont" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 360, 640 )

[sub_resource type="DynamicFont" id=2]
size = 72
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu/Title:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ) ]
}

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
Ball = ExtResource( 3 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
modulate = Color( 1, 1, 1, 0 )
shape = SubResource( 1 )
passby_press = true
action = "clic"
visibility_mode = 1

[node name="PlayerBall" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 464 )

[node name="Main" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="Score" type="Label" parent="Main"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 85.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.972549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Max" type="Label" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -16.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.854902, 0.490196, 0.133333, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Max: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="Main"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main/MainMenu"]
margin_top = 179.0
margin_right = 720.0
margin_bottom = 460.0
rect_pivot_offset = Vector2( 360, 150 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.901961, 0.854902, 0.160784, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 8
text = "The Ball
GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Press" type="Button" parent="Main/MainMenu"]
margin_left = 123.0
margin_top = 560.0
margin_right = 596.0
margin_bottom = 661.0
focus_mode = 0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.176471, 0.576471, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.992157, 0.972549, 1 )
enabled_focus_mode = 0
keep_pressed_outside = true
text = "Press to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Desc" type="Label" parent="Main/MainMenu"]
margin_top = 761.0
margin_right = 720.0
margin_bottom = 900.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.156863, 0.776471, 0.254902, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Eat smaller balls,
avoid bigger balls."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leaderboard" type="Button" parent="Main/MainMenu"]
margin_left = 118.0
margin_top = 1000.0
margin_right = 602.0
margin_bottom = 1101.0
focus_mode = 0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.176471, 0.576471, 0.866667, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.992157, 0.972549, 1 )
enabled_focus_mode = 0
text = "Leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseMenu" type="VBoxContainer" parent="Main"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ups" type="Label" parent="Main/LoseMenu"]
margin_top = 510.0
margin_right = 720.0
margin_bottom = 649.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.827451, 0.152941, 0.203922, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Ups!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Button" parent="Main/LoseMenu"]
margin_left = 138.0
margin_top = 653.0
margin_right = 582.0
margin_bottom = 770.0
focus_mode = 0
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.854902, 0.490196, 0.133333, 1 )
enabled_focus_mode = 0
text = "Play again?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main"]
autoplay = "Nueva Animación"
"anims/Nueva Animación" = SubResource( 5 )

[node name="Audio" type="AudioStreamPlayer" parent="Main"]
stream = ExtResource( 5 )
volume_db = -10.0
